хэдер с адаптивом готов

--- a/index.html
+++ b/index.html
@@ -5,20 +5,111 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" href="globe.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="globe.ico" type="image/x-icon" />
 
 		<title>FurnitureShop</title>
 	</head>
 	<body>
 		<div class="wrapper">
-			<header class="header"></header>
-			<main class="main">
-				<div class="gilroy1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, consequuntur totam temporibus consequatur voluptatum dolore maxime cupiditate eaque minima incidunt tenetur perspiciatis quo sit? Consequuntur suscipit autem voluptas mollitia nisi.</div>
-				<div class="gilroy2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, consequuntur totam temporibus consequatur voluptatum dolore maxime cupiditate eaque minima incidunt tenetur perspiciatis quo sit? Consequuntur suscipit autem voluptas mollitia nisi.</div>
-				<div class="gilroy3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, consequuntur totam temporibus consequatur voluptatum dolore maxime cupiditate eaque minima incidunt tenetur perspiciatis quo sit? Consequuntur suscipit autem voluptas mollitia nisi.</div>
-				<div class="gilroy4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, consequuntur totam temporibus consequatur voluptatum dolore maxime cupiditate eaque minima incidunt tenetur perspiciatis quo sit? Consequuntur suscipit autem voluptas mollitia nisi.</div>
-				<div class="gilroy5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, consequuntur totam temporibus consequatur voluptatum dolore maxime cupiditate eaque minima incidunt tenetur perspiciatis quo sit? Consequuntur suscipit autem voluptas mollitia nisi.</div>
-			</main>
+			<header class="header">
+				<div class="header__inner">
+					<div class="header__container">
+						<div class="header__body">
+							<div class="header__main">
+								<a href="" class="header__logo">Funiro.</a>
+								<div class="header__menu menu">
+									<nav class="menu__body">
+										<ul data-spollers="767,max" class="menu__list">
+											
+
+											<li class="menu__item ">
+												<a class="menu__link" href="#"> Products </a>
+												<button data-spoller class="menu__arrow icon-arrow-down"></button>
+												<div class="menu__sub-inner">
+													<ul class="menu__sub-list">
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 1</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 2</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 3</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 4</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 5</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 6</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 7</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 8</a></li>
+														</ul>
+												</div>
+											</li> 
+											 <li class="menu__item">
+												<a class="menu__link" href="#"> Products </a>
+												<button data-spoller class="menu__arrow icon-arrow-down"></button>
+												<div class="menu__sub-inner">
+													<ul class="menu__sub-list">
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 1</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 2</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 3</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 4</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 5</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 6</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 7</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 8</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 9</a></li>
+														</ul>
+												</div>
+											</li>
+
+											<li class="menu__item ">
+												<a class="menu__link" href="#">Rooms</a>
+												<button data-spoller class="menu__arrow icon-arrow-down"></button>
+												<div class="menu__sub-inner">
+													<ul class="menu__sub-list">
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Rooms 1</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Rooms 2</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Rooms 3</a></li>
+														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Rooms 4</a></li>
+													</ul>
+												</div>
+											</li>
+											<!-- <li class="menu__item"><a class="menu__link" href="#">Inspirations</a></li> -->
+										</ul>
+									</nav>
+								</div>
+							</div>
+
+							<div class="header__search">
+								<div class="search-form">
+									<button class="search-form__icon icon-search"></button>
+
+									<form action="#" class="search-form__item">
+										<button type="submit" class="search-form__btn icon-search"></button>
+										<input type="text" class="search-form__input" avtocomplete="off" placeholder="Search " />
+									</form>
+								</div>
+							</div>
+
+							<div class="header__actions actions-header">
+								<a href="#footer" class="actions-header__item actions-header__item--favorites icon-favorite"></a>
+
+								<div class="actions-header__item cart-header">
+									<a href="#" class="cart-header__icon icon-cart"><span>1</span></a>
+									<div class="cart-header__body">
+										<ul class="cart-header__list cart-list"></ul>
+									</div>
+								</div>
+
+								<a href="#footer" class="actions-header__item actions-header__item--user ibg">
+									<img src="images/avatar.jpg" alt="avatar" />
+								</a>
+							</div>
+
+							<button type="button" class="btn-menu">
+								<span></span>
+								<span></span>
+								<span></span>
+							</button>
+						</div>
+					</div>
+				</div>
+			</header>
+			<main class="main"></main>
 			<footer class="footer"></footer>
 		</div>
 		<script src="js/main.js"></script>
