--- a/index.html
+++ b/index.html
@@ -19,26 +19,8 @@
 								<a href="" class="header__logo">Funiro.</a>
 								<div class="header__menu menu">
 									<nav class="menu__body">
-										<ul data-spollers="767,max" class="menu__list">
-											
-
-											<li class="menu__item ">
-												<a class="menu__link" href="#"> Products </a>
-												<button data-spoller class="menu__arrow icon-arrow-down"></button>
-												<div class="menu__sub-inner">
-													<ul class="menu__sub-list">
-														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 1</a></li>
-														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 2</a></li>
-														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 3</a></li>
-														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 4</a></li>
-														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 5</a></li>
-														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 6</a></li>
-														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 7</a></li>
-														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 8</a></li>
-														</ul>
-												</div>
-											</li> 
-											 <li class="menu__item">
+										<ul class="menu__list">
+											<li class="menu__item">
 												<a class="menu__link" href="#"> Products </a>
 												<button data-spoller class="menu__arrow icon-arrow-down"></button>
 												<div class="menu__sub-inner">
@@ -52,11 +34,11 @@
 														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 7</a></li>
 														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 8</a></li>
 														<li class="menu__sub-item"><a href="#" class="menu__sub-link">Product 9</a></li>
-														</ul>
+													</ul>
 												</div>
 											</li>
 
-											<li class="menu__item ">
+											<li class="menu__item">
 												<a class="menu__link" href="#">Rooms</a>
 												<button data-spoller class="menu__arrow icon-arrow-down"></button>
 												<div class="menu__sub-inner">
@@ -68,7 +50,7 @@
 													</ul>
 												</div>
 											</li>
-											<!-- <li class="menu__item"><a class="menu__link" href="#">Inspirations</a></li> -->
+											<li class="menu__item"><a class="menu__link" href="#">Inspirations</a></li>
 										</ul>
 									</nav>
 								</div>
@@ -110,7 +92,70 @@
 				</div>
 			</header>
 			<main class="main"></main>
-			<footer class="footer"></footer>
+			<footer class="footer">
+				<div class="footer__container">
+					<div class="footer__body">
+						<div class="footer__main">
+							<a href="#" class="footer__logo">Funiro.</a>
+
+							<div class="footer__text">
+								Worldwide furniture store since 2020. We sell over 1000+ branded products on our website
+							</div>
+
+							<div class="footer__contacts contacts-footer">
+								<a href="#" class="contacts-footer__item"
+									><span class="icon-location"></span><span>Sawojajar Malang, Indonesia</span></a
+								>
+								<a href="tel:62894563455" class="contacts-footer__item"
+									><span class="icon-phone"></span><span>+6289 456 3455</span></a
+								>
+								<a href="/" class="contacts-footer__item">www.funiro.com</a>
+							</div>
+						</div>
+						<div class="footer__menu menu-footer">
+							<div class="menu-footer__column">
+								<button class="menu-footer__title title-footer">Menu</button>
+								<button class="menu-footer__arrow icon-arrow-down"></button>
+								<ul class="menu-footer__list">
+									<li class="menu-footer__item"><a class="menu-footer__link" href="#">Products</a></li>
+									<li class="menu-footer__item"><a class="menu-footer__link" href="#">Rooms</a></li>
+									<li class="menu-footer__item"><a class="menu-footer__link" href="#">Inspirations</a></li>
+									<li class="menu-footer__item"><a class="menu-footer__link" href="#">About Us</a></li>
+									<li class="menu-footer__item"><a class="menu-footer__link" href="#">Terms & Policy</a></li>
+								</ul>
+							</div>
+							<div class="menu-footer__column menu-footer__column--active">
+								<button class="menu-footer__title title-footer">Account</button>
+								<button class="menu-footer__arrow icon-arrow-down"></button>
+
+								<ul class="menu-footer__list">
+									<li class="menu-footer__item"><a class="menu-footer__link" href="#">My Account</a></li>
+									<li class="menu-footer__item"><a class="menu-footer__link" href="#"> Checkout</a></li>
+									<li class="menu-footer__item"><a class="menu-footer__link" href="#"> My Cart</a></li>
+									<li class="menu-footer__item"><a class="menu-footer__link" href="#">My catalog</a></li>
+								</ul>
+							</div>
+							<div class="menu-footer__column">
+								<button class="menu-footer__title title-footer">Stay Connected</button>
+								<button class="menu-footer__arrow icon-arrow-down"></button>
+
+								<ul class="menu-footer__list">
+									<li class="menu-footer__item"><a class="menu-footer__link" href="#">Facebook</a></li>
+									<li class="menu-footer__item"><a class="menu-footer__link" href="#">Instagram</a></li>
+									<li class="menu-footer__item"><a class="menu-footer__link" href="#">Twitter</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="footer__subscribe subscribe">
+							<div class="subscribe__title title-footer">Stay Updated</div>
+							<form class="subscribe__form" action="#">
+								<input autocomplete="off" class="subscribe__text-in" type="email" placeholder="Enter your email" />
+								<button class="subscribe__btn icon-send" type="submit"></button>
+							</form>
+						</div>
+					</div>
+				</div>
+			</footer>
 		</div>
 		<script src="js/main.js"></script>
 	</body>
