--- a/index.html
+++ b/index.html
@@ -178,6 +178,39 @@
 						</div>
 					</div>
 				</section>
+				<section class="main__advantages advantages">
+						<div class="advantages__container">
+							<div class="advantages__item">
+								<div class="advantages__icon">
+									<img src="images/advantages/01.svg" alt="advantages">
+								</div>
+									<h3 class="advantages__title">High Quality</h3>
+									<p class="advantages__text">crafted from top materials</p>
+							</div>
+							<div class="advantages__item">
+								<div class="advantages__icon">
+									<img src="images/advantages/02.svg" alt="advantages">
+								</div>
+									<h3 class="advantages__title">Warrany Protection</h3>
+									<p class="advantages__text">Over 2 years</p>
+							</div>
+							<div class="advantages__item">
+								<div class="advantages__icon">
+									<img src="images/advantages/03.svg" alt="advantages">
+								</div>
+									<h3 class="advantages__title">Free Shipping</h3>
+									<p class="advantages__text">Order over 150 $</p>
+							</div>
+							<div class="advantages__item">
+								<div class="advantages__icon">
+									<img src="images/advantages/04.svg" alt="advantages">
+								</div>
+									<h3 class="advantages__title">24 / 7 Support</h3>
+									<p class="advantages__text">Dedicated support</p>
+							</div>
+						</div>
+					
+				</section>
 			</main>
 
 			<footer class="footer">
