блок rooms c адаптивом готов

--- a/index.html
+++ b/index.html
@@ -109,10 +109,14 @@
 
 							<div class="main-slider__slider slider-main">
 								<div class="slider-main__controls controls-slider-main">
-									<div class="controls-slider-main__dots"></div>
+									<div class="controls-slider-main__dotts"></div>
 									<div class="controls-slider-main__arrows slider-arrows">
-										<button type="button" class="slider-arrows__arrow slider-arrows__arrow--prev icon-arrow-down"></button>
-										<button type="button" class="slider-arrows__arrow slider-arrows__arrow--next icon-arrow-down"></button>
+										<button type="button" class="slider-arrows__arrow slider-arrows__arrow--prev">
+											<span class="icon-arrow-down"></span>
+										</button>
+										<button type="button" class="slider-arrows__arrow slider-arrows__arrow--next">
+											<span class="icon-arrow-down"></span>
+										</button>
 									</div>
 								</div>
 
@@ -312,29 +316,99 @@
 						<div class="rooms__body">
 							<h2 class="rooms__title title-block">50+ Beautiful rooms inspiration</h2>
 							<div class="rooms__text">Our designer already made a lot of beautiful prototipe of rooms that inspire you</div>
-							<a href="" class="rooms__button">Explore More</a>
+							<a href="" class="rooms__button btn-block">Explore More</a>
 						</div>
 						<div class="rooms__slider slider-rooms">
-							<div class="slider-rooms__body swiper">
+							<div class="slider-rooms__body swiper2">
 								<div class="swiper-wrapper">
 									<div class="slider-rooms__slide swiper-slide">
-										<div class="slider-rooms__image ibg"><img src="images/rooms/01.jpg" alt="rooms" /></div>
-										<a href="" class="slider-rooms__content icon-arrow-link">
+										<div class="slider-rooms__image ibg ibg"><img src="images/rooms/01.jpg" alt="rooms" /></div>
+										<a data-swiper-parallax-opacity="0" data-swiper-parallax-y="-100%" href="" class="slider-rooms__content">
 											<div class="slider-rooms__label label-slider">
 												<div class="label-slider__number">01</div>
 												<div class="label-slider__line"></div>
 												<div class="label-slider__text">Bed Room</div>
 											</div>
 											<div class="slider-rooms__title">Inner Peace</div>
+											<span class="icon-arrow-link"></span>
+										</a>
+									</div>
+									<div class="slider-rooms__slide swiper-slide">
+										<div class="slider-rooms__image ibg"><img src="images/rooms/02.jpg" alt="rooms" /></div>
+										<a data-swiper-parallax-opacity="0" data-swiper-parallax-y="-100%" href="" class="slider-rooms__content">
+											<div class="slider-rooms__label label-slider">
+												<div class="label-slider__number">02</div>
+												<div class="label-slider__line"></div>
+												<div class="label-slider__text">Bed Room</div>
+											</div>
+											<div class="slider-rooms__title">Inner Peace</div>
+											<span class="icon-arrow-link"></span>
+										</a>
+									</div>
+									<div class="slider-rooms__slide swiper-slide">
+										<div class="slider-rooms__image ibg"><img src="images/rooms/03.jpg" alt="rooms" /></div>
+										<a data-swiper-parallax-opacity="0" data-swiper-parallax-y="-100%" href="" class="slider-rooms__content">
+											<div class="slider-rooms__label label-slider">
+												<div class="label-slider__number">03</div>
+												<div class="label-slider__line"></div>
+												<div class="label-slider__text">Bed Room</div>
+											</div>
+
+											<div class="slider-rooms__title">Inner Peace</div>
+
+											<span class="icon-arrow-link"></span>
 										</a>
 									</div>
 
-									<div class="slider-rooms__arrows slider-arrows">
-										<button type="button" class="slider-arrows__arrow slider-arrows__arrow--while slider-arrows__arrow--prev icon-arrow-down"></button>
-										<button type="button" class="slider-arrows__arrow slider-arrows__arrow--while slider-arrows__arrow--next icon-arrow-down"></button>
+									<div class="slider-rooms__slide swiper-slide">
+										<div class="slider-rooms__image ibg"><img src="images/rooms/03.jpg" alt="rooms" /></div>
+										<a data-swiper-parallax-opacity="0" data-swiper-parallax-y="-100%" href="" class="slider-rooms__content">
+											<div class="slider-rooms__label label-slider">
+												<div class="label-slider__number">04</div>
+												<div class="label-slider__line"></div>
+												<div class="label-slider__text">Bed Room</div>
+											</div>
+											<div class="slider-rooms__title">Inner Peace</div>
+											<span class="icon-arrow-link"></span>
+										</a>
 									</div>
-									<div class="slider-rooms__dotts"></div>
+									<div class="slider-rooms__slide swiper-slide">
+										<div class="slider-rooms__image ibg"><img src="images/rooms/03.jpg" alt="rooms" /></div>
+										<a data-swiper-parallax-opacity="0" data-swiper-parallax-y="-100%" href="" class="slider-rooms__content">
+											<div class="slider-rooms__label label-slider">
+												<div class="label-slider__number">05</div>
+												<div class="label-slider__line"></div>
+												<div class="label-slider__text">Bed Room</div>
+											</div>
+											<div class="slider-rooms__title">Inner Peace</div>
+											<span class="icon-arrow-link"></span>
+										</a>
+									</div>
+									<div class="slider-rooms__slide swiper-slide">
+										<div class="slider-rooms__image ibg"><img src="images/rooms/03.jpg" alt="rooms" /></div>
+										<a data-swiper-parallax-opacity="0" data-swiper-parallax-y="-100%" href="" class="slider-rooms__content">
+											<div class="slider-rooms__label label-slider">
+												<div class="label-slider__number">06</div>
+												<div class="label-slider__line"></div>
+												<div class="label-slider__text">Bed Room</div>
+											</div>
+											<div class="slider-rooms__title">Inner Peace</div>
+											<span class="icon-arrow-link"></span>
+										</a>
+									</div>
 								</div>
+								<div class="slider-rooms__arrows slider-arrows">
+									<button type="button" class="slider-arrows__arrow slider-arrows__arrow--while slider-arrows__arrow--prev">
+										<span class="icon-arrow-down"></span>
+									</button>
+									<button
+										type="button"
+										class="slider-arrows__arrow slider-arrows__arrow--while slider-arrows__arrow--next "
+									>
+										<span class="icon-arrow-down"></span>
+									</button>
+								</div>
+								<div class="slider-rooms__dotts"></div>
 							</div>
 						</div>
 					</div>
